# AutoLifter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install  main.cpp
autolifter/: CMakeLists.txt  complete_solver.cpp  example_space.cpp  external_comb_solver.cpp  lifting_problem.cpp  observational_covering.cpp  solver.cpp
baseline/: CMakeLists.txt
baseline/esolver/: esolver.cpp
baseline/oe/: observational_equivalence.cpp
baseline/relish/: hfta_complete_solver.cpp  hfta_synthesis.cpp
basic/: CMakeLists.txt  bitset.cpp  bitset.h  config.cpp  config.h  enumerator.cpp  enumerator.h  grammar.cpp  grammar.json  program.cpp  recorder.cpp  recorder.h  semantics.cpp  semantics_factory.cpp  semantics_factory.h  util.cpp  util.h  value.h
cmake/: FindGUROBI.cmake
exp/: CMakeLists.txt  benchmark.cpp  benchmark.h  benchmark.json  divide_and_conquer.cpp  longest_segment.cpp  segment_tree.cpp
exp/dataset/: benchmark.cpp  divide_and_conquer.cpp  longest_segment.cpp  segment_tree.cpp  single_pass.cpp
exp/paradigms/: divide_and_conquer_paradigm.cpp  lsp1_paradigm.cpp  lsp2_paradigm.cpp  lsp3_paradigm.cpp  paradigm_util.cpp  segment_tree.cpp  single_pass_paradigm.cpp
hfta/: hfta_complete_solver.cpp  hfta_complete_solver.h  hfta_synthesis.cpp
include/autolifter/: complete_solver.h  example_space.h  external_comb_solver.h  lifting_problem.h  observational_covering.h  solver.h
include/baseline/: esolver.h  observational_equivalence.h  relish.h
include/basic/: config.h  data.h  grammar.h  program.h  recorder.h  semantics.h  semantics_factory.h  util.h
polygen/: CMakeLists.txt  polygen.cpp  polygen.h  term_solver.cpp  term_solver.h  unifier.cpp  unifier.h
run/: benchmark.json  evaluate.py  run  run_exp
solver/: .gitignore  brute_force_complete_solver.cpp  brute_force_complete_solver.h  complete_solver.cpp  complete_solver.h  enumerate_based_solver.cpp  enumerate_based_solver.h  example_space.cpp  example_space.h  external_solver.cpp  external_solver.h  pure_observational_equivalent.cpp  pure_observational_equivalent.h  solver.cpp  solver.h  task.cpp  task.h
(+581 files in other folders)
